feat: implementing of the first lab

--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "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\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -152,6 +172,7 @@
     "\n",
     "if openai_api_key:\n",
     "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "    print(openai_api_key)\n",
     "else:\n",
     "    print(\"OpenAI API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
     "    \n"
@@ -159,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -207,7 +236,7 @@
     "# If you get a NameError, head to the guides folder (guide 6) to learn about NameErrors - always instantly fixable\n",
     "\n",
     "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-nano\",\n",
+    "    model=\"gpt-4o-mini\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -216,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If two trains start from the same point and travel in opposite directions, one at 60 mph and the other at 40 mph, how long will it take before the distance between them is 350 miles? Now, if the faster train increases its speed by 20%, and the slower train decreases its speed by 20%, how long will it take before the distance between them is 350 miles?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -246,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +293,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the problem step-by-step.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 1: Original speeds and distance\n",
+      "\n",
+      "- Speed of Train 1: \\( 60 \\text{ mph} \\)\n",
+      "- Speed of Train 2: \\( 40 \\text{ mph} \\)\n",
+      "- The trains are moving in opposite directions from the same point.\n",
+      "- We want to find the time \\( t \\) when the distance between them is \\( 350 \\) miles.\n",
+      "\n",
+      "Since they travel in opposite directions, their relative speed is the sum of their speeds:\n",
+      "\n",
+      "\\[\n",
+      "\\text{relative speed} = 60 + 40 = 100 \\text{ mph}\n",
+      "\\]\n",
+      "\n",
+      "The distance between them after time \\( t \\) is:\n",
+      "\n",
+      "\\[\n",
+      "\\text{distance} = \\text{relative speed} \\times t = 100 \\times t\n",
+      "\\]\n",
+      "\n",
+      "We want the distance to be 350 miles:\n",
+      "\n",
+      "\\[\n",
+      "100t = 350 \\implies t = \\frac{350}{100} = 3.5 \\text{ hours}\n",
+      "\\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### Step 2: Adjusted speeds\n",
+      "\n",
+      "- The faster train increases speed by 20%:\n",
+      "\\[\n",
+      "60 + 0.2 \\times 60 = 60 + 12 = 72 \\text{ mph}\n",
+      "\\]\n",
+      "\n",
+      "- The slower train decreases speed by 20%:\n",
+      "\\[\n",
+      "40 - 0.2 \\times 40 = 40 - 8 = 32 \\text{ mph}\n",
+      "\\]\n",
+      "\n",
+      "Now, their relative speed is:\n",
+      "\n",
+      "\\[\n",
+      "72 + 32 = 104 \\text{ mph}\n",
+      "\\]\n",
+      "\n",
+      "We want to find the new time \\( t' \\):\n",
+      "\n",
+      "\\[\n",
+      "104 t' = 350 \\implies t' = \\frac{350}{104} \\approx 3.365 \\text{ hours}\n",
+      "\\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### **Final Answers:**\n",
+      "\n",
+      "- **Original speeds:**\n",
+      "\n",
+      "\\[\n",
+      "\\boxed{3.5 \\text{ hours}}\n",
+      "\\]\n",
+      "\n",
+      "- **Adjusted speeds:**\n",
+      "\n",
+      "\\[\n",
+      "\\boxed{ \\approx 3.37 \\text{ hours} }\n",
+      "\\]\n",
+      "\n",
+      "---\n",
+      "\n",
+      "If you need time in minutes:\n",
+      "\n",
+      "\\[\n",
+      "0.37 \\times 60 \\approx 22 \\text{ minutes}\n",
+      "\\]\n",
+      "\n",
+      "So, approximately **3 hours and 22 minutes** after speed changes.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -273,9 +397,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem step-by-step.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 1: Original speeds and distance\n",
+       "\n",
+       "- Speed of Train 1: \\( 60 \\text{ mph} \\)\n",
+       "- Speed of Train 2: \\( 40 \\text{ mph} \\)\n",
+       "- The trains are moving in opposite directions from the same point.\n",
+       "- We want to find the time \\( t \\) when the distance between them is \\( 350 \\) miles.\n",
+       "\n",
+       "Since they travel in opposite directions, their relative speed is the sum of their speeds:\n",
+       "\n",
+       "\\[\n",
+       "\\text{relative speed} = 60 + 40 = 100 \\text{ mph}\n",
+       "\\]\n",
+       "\n",
+       "The distance between them after time \\( t \\) is:\n",
+       "\n",
+       "\\[\n",
+       "\\text{distance} = \\text{relative speed} \\times t = 100 \\times t\n",
+       "\\]\n",
+       "\n",
+       "We want the distance to be 350 miles:\n",
+       "\n",
+       "\\[\n",
+       "100t = 350 \\implies t = \\frac{350}{100} = 3.5 \\text{ hours}\n",
+       "\\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Step 2: Adjusted speeds\n",
+       "\n",
+       "- The faster train increases speed by 20%:\n",
+       "\\[\n",
+       "60 + 0.2 \\times 60 = 60 + 12 = 72 \\text{ mph}\n",
+       "\\]\n",
+       "\n",
+       "- The slower train decreases speed by 20%:\n",
+       "\\[\n",
+       "40 - 0.2 \\times 40 = 40 - 8 = 32 \\text{ mph}\n",
+       "\\]\n",
+       "\n",
+       "Now, their relative speed is:\n",
+       "\n",
+       "\\[\n",
+       "72 + 32 = 104 \\text{ mph}\n",
+       "\\]\n",
+       "\n",
+       "We want to find the new time \\( t' \\):\n",
+       "\n",
+       "\\[\n",
+       "104 t' = 350 \\implies t' = \\frac{350}{104} \\approx 3.365 \\text{ hours}\n",
+       "\\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### **Final Answers:**\n",
+       "\n",
+       "- **Original speeds:**\n",
+       "\n",
+       "\\[\n",
+       "\\boxed{3.5 \\text{ hours}}\n",
+       "\\]\n",
+       "\n",
+       "- **Adjusted speeds:**\n",
+       "\n",
+       "\\[\n",
+       "\\boxed{ \\approx 3.37 \\text{ hours} }\n",
+       "\\]\n",
+       "\n",
+       "---\n",
+       "\n",
+       "If you need time in minutes:\n",
+       "\n",
+       "\\[\n",
+       "0.37 \\times 60 \\approx 22 \\text{ minutes}\n",
+       "\\]\n",
+       "\n",
+       "So, approximately **3 hours and 22 minutes** after speed changes."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -318,23 +534,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Certainly! Based on the business idea addressing **Fragmented Care Coordination and Patient Engagement** in Personalized Healthcare Management, here is a detailed proposal for an **Agentic AI Solution**:\n",
+       "\n",
+       "---\n",
+       "\n",
+       "## **Agentic AI Solution Proposal: HealthSync AI**\n",
+       "\n",
+       "### Overview:\n",
+       "**HealthSync AI** is an autonomous, intelligent agent designed as a centralized personal health coordinator. It seamlessly integrates data from multiple healthcare stakeholders—patients, providers, pharmacies, and devices—to proactively manage and optimize patient care in real-time.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Core Features:\n",
+       "\n",
+       "#### 1. **Unified Patient Data Integration**\n",
+       "- Aggregate patient medical records, medications, appointment schedules, and wearable data from diverse, siloed sources.\n",
+       "- Use natural language processing (NLP) to interpret clinical notes and patient communications.\n",
+       "- Maintain a real-time, holistic patient health profile accessible to all authorized stakeholders.\n",
+       "\n",
+       "#### 2. **Autonomous Medication Management**\n",
+       "- Generate personalized medication schedules with reminders.\n",
+       "- Detect and flag potential drug interactions or contraindications by cross-referencing latest prescriptions.\n",
+       "- Automatically notify healthcare providers if issues or patient non-adherence is detected.\n",
+       "- Facilitate seamless prescription refills by interacting with pharmacies.\n",
+       "\n",
+       "#### 3. **Dynamic Appointment and Care Coordination**\n",
+       "- Automatically schedule, confirm, and reschedule appointments by interfacing with providers’ calendars and patient preferences.\n",
+       "- Coordinate follow-up tests, screenings, and wellness visits to avoid duplication.\n",
+       "- Synchronize appointment data across patient, provider, and insurer systems.\n",
+       "\n",
+       "#### 4. **Continuous Health Monitoring & Early Alert System**\n",
+       "- Analyze real-time biometric data from wearables (heart rate, glucose, BP, etc.) and symptom logs.\n",
+       "- Detect anomalies or signs of deterioration early and escalate alerts to patients, caregivers, and providers.\n",
+       "- Initiate emergency protocols or telehealth consultations autonomously if critical thresholds are crossed.\n",
+       "\n",
+       "#### 5. **Personalized Coaching & Engagement**\n",
+       "- Deliver tailored education content, lifestyle suggestions, and motivation nudges using behavioral science principles.\n",
+       "- Use conversational AI to answer patient queries 24/7.\n",
+       "- Encourage adherence through gamification, progress tracking, and community support features.\n",
+       "\n",
+       "#### 6. **Privacy, Security, and Compliance**\n",
+       "- Operate with strict adherence to HIPAA, GDPR, and relevant healthcare regulations.\n",
+       "- Employ robust data encryption, access controls, and consent management.\n",
+       "- Ensure transparent data usage with audit trails.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### How It Works (Agentic Workflow):\n",
+       "\n",
+       "1. **Data Ingestion:** HealthSync AI continuously gathers data from EHRs, pharmacies, patient devices, and conversations.\n",
+       "2. **Autonomous Reasoning:** Utilizing advanced AI models (reinforcement learning, causal inference), it prioritizes tasks—e.g., medication reminders, scheduling urgent visits, or alerting providers.\n",
+       "3. **Proactive Execution:** Without waiting for manual prompts, it acts to resolve conflicts, fill gaps, or escalate issues by communicating across systems or initiating patient interactions.\n",
+       "4. **Feedback Loop:** Learns from patient responses and outcomes to personalize coaching strategies and refine coordination efforts over time.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Benefits:\n",
+       "\n",
+       "- **To Patients:** Reduced confusion, better adherence, more confidence & engagement in self-care.\n",
+       "- **To Providers:** Holistic patient insights, reduced administrative burden, fewer preventable complications.\n",
+       "- **To Systems:** Lower costs from reduced hospitalizations, ER visits, and duplicated services.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Implementation Considerations:\n",
+       "\n",
+       "- Build or integrate with existing Health Information Exchanges (HIEs) for data interoperability.\n",
+       "- Partner with wearable manufacturers and pharmacies for seamless data flow.\n",
+       "- Develop user-friendly mobile and web interfaces for patients and providers.\n",
+       "- Pilot deployment with select chronic disease cohorts (e.g., diabetes, heart failure) to demonstrate efficacy.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "In short, **HealthSync AI** embodies the agentic AI ideal: acting autonomously, adaptively, and responsibly to knit together fragmented care into a seamless, patient-centric ecosystem—resulting in optimized health outcomes and empowered patients.\n",
+       "\n",
+       "If you want, I can help draft a technical architecture, business model, or roadmap next!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# First create the messages:\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Can you please pick a business area that might be worth exploring for an Agentic AI Opportunity\"}]\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
     "\n",
-    "# Then make the first call:\n",
-    "\n",
-    "response =\n",
+    "openai = OpenAI()\n",
+    "response = openai.chat.completions.create(\n",
+    "    model = \"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "#print(response.choices[0].message.content)\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
+    "messages = [{\"role\": \"user\", \"content\": business_idea + \"based on the business idea message present a pain-point in that industry something challenging that might be ripe for an Agentic solution\"}]\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "second_response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "#display(Markdown(second_response.choices[0].message.content))\n",
+    "\n",
+    "# And repeat! In the next message, include the business idea within the message\n",
+    "business_idea = second_response.choices[0].message.content\n",
+    "messages = [{\"role\": \"user\", \"content\": business_idea + \"propose me now based on the business idea the Agentic AI Solution\"}]\n",
+    "\n",
+    "third_response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "display(Markdown(third_response.choices[0].message.content))"
    ]
   },
   {
@@ -359,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
