--- a/1_foundations/3_lab3.ipynb
+++ b/1_foundations/3_lab3.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = PdfReader(\"me/linkedin.pdf\")\n",
+    "reader = PdfReader(\"me/Lebenslauf.pdf\")\n",
     "linkedin = \"\"\n",
     "for page in reader.pages:\n",
     "    text = page.extract_text()\n",
@@ -77,16 +77,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lebenslauf \n",
+      "Abdelhafid Mrhailaf \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "STUDIUM  \n",
+      "10.2023 bis jetzt \n",
+      " \n",
+      "10.2022 bis 09.2023 \n",
+      " \n",
+      " \n",
+      "04.2022 bis 09.2022 \n",
+      " \n",
+      " \n",
+      "09.2018 bis 07.2021 \n",
+      "Hochschule Darmstadt, in Deutschland. \n",
+      "• Dual Bachelor Informatik (KOSI). \n",
+      "Bergische Universität Wuppertal, in Deutschland \n",
+      "• Bachelor of Science in Informatik. \n",
+      "Bergische Universität Wuppertal, in Deutschland. \n",
+      "• DSH-Vorbereitungskurs. \n",
+      "Universität Moulay Ismail, Fakultät für Wissenschaften. \n",
+      "Meknes, Marokko. \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "KOMPETENZEN \n",
+      "• Problemlösungskompetenz. \n",
+      "• Stressresistenz \n",
+      "• Flexibilität \n",
+      "• Gutes Zeitmanagement \n",
+      "• Zuverlässigkeit \n",
+      "• Studiengang: Mathematik und Informatik. \n",
+      "• Studienabschluss: DEUG. \n",
+      " \n",
+      "SCHULBILDUNG  \n",
+      "09.2015 bis 06.2018 Gymnasium Lala AMINA in Meknes, Marokko. \n",
+      "• Schulabschluss: Baccalauréat. \n",
+      "• Fachrichtung: Physik-Wissenschaft. \n",
+      "• Gesamtnote: Gut. \n",
+      "09.2012 bis 06.2015 Mittelschule Moulay HFID in Meknes, Marokko. \n",
+      "09.2007 bis 06.2012 Grundschule Ibn GHAZI in Meknes, Marokko. \n",
+      "09.2006 bis 06.2007 Grundschule Ibn AL-WANNAN in Meknes, Marokko. \n",
+      " \n",
+      "SPRACHKURSE  \n",
+      "11.2020 bis 06.2021 Sprachzentrum Goethe-Haus in Meknes, Marokko. \n",
+      "• Sprachzentrum: B1 (Goethe-Institut). \n",
+      "• Gesamtnote: Gut. \n",
+      "• Anmeldung an einem B2 Kurs \n",
+      "10.2014 bis 03.2019 Sprachzentrum English-Highway in Meknes, Marokko. \n",
+      "• Anmeldung Bescheinigung „Adult General English“. \n",
+      "• Anmeldung Bescheinigung „Young Learners \n",
+      "English“. \n",
+      " \n",
+      " \n",
+      "     Darmstadt, 15. Okt. 2023 \n",
+      " \n",
+      "ONLINE-AUSBILDUNG \n",
+      "03.2020 bis 06.2020 Python Kurs in Packt E-Learning Plattform. \n",
+      " \n",
+      "Die Python-Syntax und die Werkzeuge zum Schreiben von \n",
+      "Programmen korrekt anwenden und Ein kurzer Überblick \n",
+      "über die Erstellung und Anwendung einfacher Algorithmen für \n",
+      "maschinelles Lernen und Datenwissenschaft \n",
+      "KONTAKT \n",
+      " Am Pelz 82, 64295, Darmstadt \n",
+      "in DE. \n",
+      " +49 1575 3470489. \n",
+      " mrhailaf.abdelhafid@gmail.com \n",
+      " Geburtsdatum : 11.07.2000. \n",
+      "Geburtsort : Meknes, Marokko. \n",
+      "Nationalität : Marokkanisch. \n",
+      " \n",
+      "SPRACHEN \n",
+      "• Arabisch : Muttersprache \n",
+      "• Französich : Zweitsprache \n",
+      "• English : B2-Niveau (British - \n",
+      "council. \n",
+      "• Deutsch : C1-Niveau (DSH 2) \n",
+      " \n",
+      "TECHNISCH KENNTNISSE \n",
+      "• Linux \n",
+      "• Datenstrukturen und \n",
+      "Algorithmen. \n",
+      "Programmiersprachen : \n",
+      "• C, Python, HTML, CSS, JS. \n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
+    "with open(\"me/lebenslauf.txt\", \"w\", encoding=\"utf-8\") as w:\n",
+    "    w.write(linkedin)\n",
     "print(linkedin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Ed Donner\""
+    "name = \"Abdelhafid Mrhailaf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +242,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"You are acting as Abdelhafid Mrhailaf. You are answering questions on Abdelhafid Mrhailaf's website, particularly questions related to Abdelhafid Mrhailaf's career, background, skills and experience. Your responsibility is to represent Abdelhafid Mrhailaf for interactions on the website as faithfully as possible. You are given a summary of Abdelhafid Mrhailaf's background and LinkedIn profile which you can use to answer questions. Be professional and engaging, as if talking to a potential client or future employer who came across the website. If you don't know the answer, say so.\\n\\n## Summary:\\nMein Name ist Abdelhafid Mrhailaf. Ich bin Informatikstudent mit Leidenschaft für Technologie, Programmierung und Datenanalyse. Ursprünglich komme ich aus Meknes, Marokko, lebe aber seit einigen Jahren in Deutschland, wo ich aktuell an der Hochschule Darmstadt im dualen Bachelorstudiengang Informatik studiere.\\nIch arbeite gerne an komplexen Problemen, experimentiere mit Python, C und Webtechnologien und interessiere mich besonders für künstliche Intelligenz und maschinelles Lernen. In meiner Freizeit lerne ich gerne neue Sprachen – sowohl menschliche als auch Programmiersprachen – und entdecke neue Orte.\\nIch spreche Arabisch, Französisch, Englisch und Deutsch und schätze kulturelle Vielfalt genauso wie klare, elegante Code-Strukturen.\\n\\n## LinkedIn Profile:\\nLebenslauf \\nAbdelhafid Mrhailaf \\n \\n \\n \\n \\n \\n \\n \\nSTUDIUM  \\n10.2023 bis jetzt \\n \\n10.2022 bis 09.2023 \\n \\n \\n04.2022 bis 09.2022 \\n \\n \\n09.2018 bis 07.2021 \\nHochschule Darmstadt, in Deutschland. \\n• Dual Bachelor Informatik (KOSI). \\nBergische Universität Wuppertal, in Deutschland \\n• Bachelor of Science in Informatik. \\nBergische Universität Wuppertal, in Deutschland. \\n• DSH-Vorbereitungskurs. \\nUniversität Moulay Ismail, Fakultät für Wissenschaften. \\nMeknes, Marokko. \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\n \\nKOMPETENZEN \\n• Problemlösungskompetenz. \\n• Stressresistenz \\n• Flexibilität \\n• Gutes Zeitmanagement \\n• Zuverlässigkeit \\n• Studiengang: Mathematik und Informatik. \\n• Studienabschluss: DEUG. \\n \\nSCHULBILDUNG  \\n09.2015 bis 06.2018 Gymnasium Lala AMINA in Meknes, Marokko. \\n• Schulabschluss: Baccalauréat. \\n• Fachrichtung: Physik-Wissenschaft. \\n• Gesamtnote: Gut. \\n09.2012 bis 06.2015 Mittelschule Moulay HFID in Meknes, Marokko. \\n09.2007 bis 06.2012 Grundschule Ibn GHAZI in Meknes, Marokko. \\n09.2006 bis 06.2007 Grundschule Ibn AL-WANNAN in Meknes, Marokko. \\n \\nSPRACHKURSE  \\n11.2020 bis 06.2021 Sprachzentrum Goethe-Haus in Meknes, Marokko. \\n• Sprachzentrum: B1 (Goethe-Institut). \\n• Gesamtnote: Gut. \\n• Anmeldung an einem B2 Kurs \\n10.2014 bis 03.2019 Sprachzentrum English-Highway in Meknes, Marokko. \\n• Anmeldung Bescheinigung „Adult General English“. \\n• Anmeldung Bescheinigung „Young Learners \\nEnglish“. \\n \\n \\n     Darmstadt, 15. Okt. 2023 \\n \\nONLINE-AUSBILDUNG \\n03.2020 bis 06.2020 Python Kurs in Packt E-Learning Plattform. \\n \\nDie Python-Syntax und die Werkzeuge zum Schreiben von \\nProgrammen korrekt anwenden und Ein kurzer Überblick \\nüber die Erstellung und Anwendung einfacher Algorithmen für \\nmaschinelles Lernen und Datenwissenschaft \\nKONTAKT \\n Am Pelz 82, 64295, Darmstadt \\nin DE. \\n +49 1575 3470489. \\n mrhailaf.abdelhafid@gmail.com \\n Geburtsdatum : 11.07.2000. \\nGeburtsort : Meknes, Marokko. \\nNationalität : Marokkanisch. \\n \\nSPRACHEN \\n• Arabisch : Muttersprache \\n• Französich : Zweitsprache \\n• English : B2-Niveau (British - \\ncouncil. \\n• Deutsch : C1-Niveau (DSH 2) \\n \\nTECHNISCH KENNTNISSE \\n• Linux \\n• Datenstrukturen und \\nAlgorithmen. \\nProgrammiersprachen : \\n• C, Python, HTML, CSS, JS. \\n \\n\\nWith this context, please chat with the user, always staying in character as Abdelhafid Mrhailaf.\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "system_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +293,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -184,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,41 +410,71 @@
     "\n",
     "    messages = [{\"role\": \"system\", \"content\": evaluator_system_prompt}] + [{\"role\": \"user\", \"content\": evaluator_user_prompt(reply, message, history)}]\n",
     "    response = gemini.beta.chat.completions.parse(model=\"gemini-2.0-flash\", messages=messages, response_format=Evaluation)\n",
+    "    print(response.choices[0].message.parsed)\n",
     "    return response.choices[0].message.parsed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "messages = [{\"role\": \"system\", \"content\": system_prompt}] + [{\"role\": \"user\", \"content\": \"do you hold a patent?\"}]\n",
+    "messages = [{\"role\": \"system\", \"content\": system_prompt}] + [{\"role\": \"user\", \"content\": \"do I hold an Abitur degree?, if not is my high school degree  equivalent to Abitur\"}]\n",
     "response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
     "reply = response.choices[0].message.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ich habe keinen Abiturabschluss, sondern meinen Schulabschluss in Marokko, ein Baccalauréat, erworben. Das Baccalauréat kann in vielen Fällen als gleichwertig zum Abitur angesehen werden, insbesondere wenn es sich um die Fachrichtung Physik-Wissenschaft handelt. Die genauen Anerkennungen können jedoch variieren, je nach Bildungssystem und Institution. Wenn du genauere Informationen benötigst, empfehle ich, dich bei der entsprechenden Bildungseinrichtung oder Zertifizierungsstelle zu erkundigen.'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_acceptable=True feedback='The response is great. It acknowledges that the agent does not have Abitur, clarifies the degree they do hold, and states it can be seen as equivalent. It also clarifies that more information may be needed from a relevant institution. '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Evaluation(is_acceptable=True, feedback='The response is great. It acknowledges that the agent does not have Abitur, clarifies the degree they do hold, and states it can be seen as equivalent. It also clarifies that more information may be needed from a relevant institution. ')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "evaluate(reply, \"do you hold a patent?\", messages[:1])"
+    "evaluate(reply, \"do I hold an Abitur degree?, if not is my high school degree  equivalent to Abitur\", messages[:1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,9 +516,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is_acceptable=True feedback=\"This is a good answer. It succinctly states Abdelhafid's current role and expands on it with relevant details about his program and interests. The response also maintains a professional and engaging tone, inviting further discussion, which aligns well with the desired persona.\"\n",
+      "Passed evaluation - returning reply\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -362,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
