--- a/2_openai/3_lab3.ipynb
+++ b/2_openai/3_lab3.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Google API Key exists and begins AI\n",
+      "DeepSeek API Key not set (and this is optional)\n",
+      "Groq API Key not set (and this is optional)\n"
+     ]
+    }
+   ],
    "source": [
     "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
@@ -74,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,29 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
-    "DEEPSEEK_BASE_URL = \"https://api.deepseek.com/v1\"\n",
-    "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\""
+    "GEMINI_BASE_URL = \"https://generativelanguage.googleapis.com/v1beta/openai/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "deepseek_client = AsyncOpenAI(base_url=DEEPSEEK_BASE_URL, api_key=deepseek_api_key)\n",
     "gemini_client = AsyncOpenAI(base_url=GEMINI_BASE_URL, api_key=google_api_key)\n",
-    "groq_client = AsyncOpenAI(base_url=GROQ_BASE_URL, api_key=groq_api_key)\n",
-    "\n",
-    "deepseek_model = OpenAIChatCompletionsModel(model=\"deepseek-chat\", openai_client=deepseek_client)\n",
-    "gemini_model = OpenAIChatCompletionsModel(model=\"gemini-2.0-flash\", openai_client=gemini_client)\n",
-    "llama3_3_model = OpenAIChatCompletionsModel(model=\"llama-3.3-70b-versatile\", openai_client=groq_client)"
+    "gemini_model = OpenAIChatCompletionsModel(model=\"gemini-2.0-flash\", openai_client=gemini_client)"
    ]
   },
   {
@@ -131,14 +145,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales_agent1 = Agent(name=\"DeepSeek Sales Agent\", instructions=instructions1, model=deepseek_model)\n",
+    "sales_agent1 = Agent(name=\"Gemini Sales Agent\", instructions=instructions1, model=gemini_model)\n",
     "sales_agent2 =  Agent(name=\"Gemini Sales Agent\", instructions=instructions2, model=gemini_model)\n",
-    "sales_agent3  = Agent(name=\"Llama3.3 Sales Agent\",instructions=instructions3,model=llama3_3_model)"
+    "sales_agent3  = Agent(name=\"OpenAi  Sales Agent\",instructions=instructions3,model=\"gpt-4o-mini\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,8 +173,8 @@
     "def send_html_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body to all sales prospects \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
-    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    from_email = Email(\"abdelhafid.mrhailaf@stud.h-da.de\")  # Change to your verified sender\n",
+    "    to_email = To(\"mrhailaf.abdelhafid@gmail.com\")  # Change to your recipient\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +243,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error getting response: Error code: 400 - {'error': {'message': \"The requested model 'gtp-4o-mini' does not exist.\", 'type': 'invalid_request_error', 'param': 'model', 'code': 'model_not_found'}}. (request_id: req_4f5b9c92fddd484da80d6c7062d759a1)\n",
+      "Error getting response: Error code: 400 - {'error': {'message': \"The requested model 'gtp-4o-mini' does not exist.\", 'type': 'invalid_request_error', 'param': 'model', 'code': 'model_not_found'}}. (request_id: req_bd83b44b9749409ba4b7639cb4e0f329)\n",
+      "Error getting response: Error code: 400 - {'error': {'message': \"The requested model 'gtp-4o-mini' does not exist.\", 'type': 'invalid_request_error', 'param': 'model', 'code': 'model_not_found'}}. (request_id: req_0e25c0d396a044bc9be496206824a8db)\n"
+     ]
+    }
+   ],
    "source": [
     "sales_manager_instructions = \"\"\"\n",
     "You are a Sales Manager at ComplAI. Your goal is to find the single best cold sales email using the sales_agent tools.\n",
@@ -384,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
