--- a/2_openai/4_lab4.ipynb
+++ b/2_openai/4_lab4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
@@ -75,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +107,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "In 2025, several AI agent frameworks have emerged, each offering unique features to enhance the development and deployment of intelligent agents.\n",
+       "\n",
+       "**Agentforce 360** by Salesforce is a comprehensive platform for building, testing, and managing enterprise AI agents. It includes a redesigned Agentforce Builder for creating agents using natural language, integration capabilities through API or JSON with Agent Script, and enhanced configurability via the Atlas Reasoning Engine. The platform also features Agentforce Voice for natural, brand-customized phone conversations and integrates closely with Slack for direct interaction with agents and third-party services. ([itpro.com](https://www.itpro.com/technology/artificial-intelligence/salesforce-just-launched-a-new-catch-all-platform-to-build-enterprise-ai-agents?utm_source=openai))\n",
+       "\n",
+       "**Agent Lightning** is a flexible and extensible framework that enables reinforcement learning-based training of large language models for any AI agent. It achieves complete decoupling between agent execution and training, allowing seamless integration with existing agents developed via diverse methods. By formulating agent execution as a Markov decision process, it defines a unified data interface and proposes a hierarchical RL algorithm, LightningRL, which contains a credit assignment module, enabling RL to handle complex interaction logic. ([arxiv.org](https://arxiv.org/abs/2508.03680?utm_source=openai))\n",
+       "\n",
+       "**Polymorphic Combinatorial Framework (PCF)** leverages large language models and mathematical frameworks to guide the meta-prompt-enabled design of solution spaces and adaptive AI agents for complex, dynamic environments. Unlike static agent architectures, PCF enables real-time parameter reconfiguration through mathematically grounded combinatorial spaces, allowing agents to adapt their core behavioral traits dynamically. Grounded in combinatorial logic, topos theory, and rough fuzzy set theory, PCF defines a multidimensional SPARK parameter space (Skills, Personalities, Approaches, Resources, Knowledge) to capture agent behaviors. ([arxiv.org](https://arxiv.org/abs/2508.01581?utm_source=openai))\n",
+       "\n",
+       "**Simpliflow** is a lightweight, open-source Python framework designed to address challenges in building generative agentic AI systems. It enables the rapid development and orchestration of linear, deterministic agentic workflows through a declarative, JSON-based configuration. Its modular architecture decouples agent management, workflow execution, and post-processing, promoting ease of use and extensibility. By integrating with LiteLLM, it supports over 100 large language models out-of-the-box. ([arxiv.org](https://arxiv.org/abs/2510.10675?utm_source=openai))\n",
+       "\n",
+       "**Amazon Bedrock AgentCore** is a platform designed to simplify the development and deployment of advanced AI agents. It includes modular services to support the full production lifecycle, such as AgentCore Runtime for scalable serverless deployment, AgentCore Memory for context management, AgentCore Identity for secure service access, AgentCore Gateway for tool integration, and AgentCore Code Interpreter to enhance problem-solving capabilities with languages like JavaScript and Python. The platform emphasizes flexibility, allowing developers to use only the components they need, facilitating scalable and secure AI agent development. ([techradar.com](https://www.techradar.com/pro/aws-looks-to-super-charge-ai-agents-with-amazon-bedrock-agentcore?utm_source=openai))\n",
+       "\n",
+       "**Model Context Protocol (MCP)** is an open standard introduced by Anthropic to standardize the way AI systems integrate and share data with external tools, systems, and data sources. MCP provides a universal interface for reading files, executing functions, and handling contextual prompts. It has been adopted by major AI providers, including OpenAI and Google DeepMind, aiming to foster an \"agentic web\" where AI agents can work together more effectively. ([en.wikipedia.org](https://en.wikipedia.org/wiki/Model_Context_Protocol?utm_source=openai))\n",
+       "\n",
+       "These frameworks represent significant advancements in AI agent development, offering diverse tools and protocols to enhance the capabilities and interoperability of intelligent agents across various applications. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -126,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To gather information on the most current AI agent frameworks available in 2025.', query='latest AI agent frameworks 2025'), WebSearchItem(reason='To find specific examples and details about leading AI agent frameworks introduced or updated in 2025.', query='best AI agent frameworks 2025'), WebSearchItem(reason='To explore opinions and analyses from experts about emerging AI agent technologies and their implications in 2025.', query='AI agent frameworks trends 2025')]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "message = \"Latest AI Agent frameworks in 2025\"\n",
@@ -174,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,8 +228,8 @@
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
+    "    from_email = Email(\"abdelhafid.mrhailaf@stud.h-da.de\") # Change this to your verified email\n",
+    "    to_email = To(\"abdelhafid.mrhailaf@controlware.de\") # Change this to your email\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    response = sg.client.mail.send.post(request_body=mail)\n",
@@ -192,16 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='send_email', description='Send out an email with the given subject and HTML body', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x7bb35b3467a0>, strict_json_schema=True, is_enabled=True)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +271,12 @@
     "    instructions=INSTRUCTIONS,\n",
     "    tools=[send_email],\n",
     "    model=\"gpt-4o-mini\",\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,9 +379,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 3 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
     "query =\"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -383,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
